--- a/dashboard.css
+++ b/dashboard.css
@@ -24,6 +24,7 @@ body {
   z-index: 100; /* Behind the navbar */
   padding: 48px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+ 
 }
 
 @media (max-width: 767.98px) {
@@ -78,6 +79,7 @@ body {
 }
 
 .navbar .navbar-toggler {
+   position: absolute; 
   top: .25rem;
   right: 1rem;
 }
